# qb-tools

./: .gitignore  CMakeLists.txt  README.md  comp_toc.hexpat  qdeopt_all.sh  qdump_all.sh  qdump_file.sh  qoffdump_symbol.sh  qoffdump_token.sh  qopt_all.sh  qrebuild_all.sh  qrename_qbs.sh  qreopt_file.sh  qtest_all.sh  scripttoken.hexpat  test_scripts.sh  thpgpak.hexpat  thpgps3_qb.hexpat
.github/workflows/: cmake-multi-platform.yml
misc/QScriptImport/: index.js  package.json
src/libs/crc/: crc32.cpp  crc32.h
src/libs/dbginfo/: dbginfo.cpp  dbginfo.h  dbginfo_pak.cpp
src/libs/lzss/: lzss.cpp
src/libs/pak/: pak.cpp  pak.h  unpak.cpp
src/libs/pre/: pre.cpp  pre.h  unpre.cpp
src/libs/qsymbol/: ArraySymbol.cpp  ArraySymbol.h  FloatSymbol.cpp  FloatSymbol.h  GreaterThanEqualToken.h  ISStream.h  IntegerSymbol.cpp  IntegerSymbol.h  LocalStringSymbol.cpp  LocalStringSymbol.h  NameSymbol.cpp  NameSymbol.h  PairSymbol.cpp  PairSymbol.h  QScriptSymbol.cpp  QScriptSymbol.h  QSymbol.cpp  QSymbol.h  QSymbolToken.cpp  QSymbolToken.h  ReferenceItemSymbol.cpp  ReferenceItemSymbol.h  StringSymbol.cpp  StringSymbol.h  StructureSymbol.cpp  StructureSymbol.h  SymbolFileStream.cpp  SymbolFileStream.h  VectorSymbol.cpp  VectorSymbol.h  lzss.h
src/libs/qtoken/: AddToken.cpp  AddToken.h  AllArgsToken.cpp  AllArgsToken.h  AndToken.cpp  AndToken.h  ArgToken.cpp  ArgToken.h  ArgumentPackToken.cpp  ArgumentPackToken.h  BeginToken.cpp  BeginToken.h  BreakToken.cpp  BreakToken.h  CaseToken.cpp  CaseToken.h  ChecksumNameToken.cpp  ChecksumNameToken.h  CloseParenthesisToken.cpp  CloseParenthesisToken.h  ColonToken.cpp  ColonToken.h  CommaToken.cpp  CommaToken.h  DefaultToken.cpp  DefaultToken.h  DivideToken.cpp  DivideToken.h  DotToken.cpp  DotToken.h  ElseIfToken.cpp  ElseIfToken.h  ElseToken.cpp  ElseToken.h  EndArrayToken.cpp  EndArrayToken.h  EndIfToken.cpp  EndIfToken.h  EndOfFileToken.cpp  EndOfFileToken.h  (+98 more)
src/libs/wad/: unwad.cpp  wad.cpp  wad.h
src/tools/checksum_dumper/: index.js  package.json
src/tools/chunk/: main.cpp  main_lzss.cpp  main_zlib.cpp  main_zlib_nochnk.cpp
src/tools/dbginfo_import/: main_pak.cpp  main_pre.cpp
src/tools/dbginfo_pakimport/: main.cpp
src/tools/dbginfo_preimport/: main.cpp
src/tools/fastdump_append/: main.cpp
src/tools/pak/: main.cpp
src/tools/pakdir/: main.cpp
src/tools/predir/: main.cpp
src/tools/pregen/: main.cpp
src/tools/qcomp/: main.cpp  qcomp.h
src/tools/qdeopt/: main.cpp  qsym_to_qscr.cpp
src/tools/qdump/: IQStream.h  QScriptFileStream.cpp  QScriptFileStream.h  QStream.cpp  QStream.h  Token.cpp  Token.h  dumper.cpp  emit.cpp  main.cpp  main.h  show_dump.cpp
src/tools/qdump/token/: AddToken.cpp  AddToken.h  AllArgsToken.cpp  AllArgsToken.h  AndToken.cpp  AndToken.h  ArgToken.cpp  ArgToken.h  BeginToken.cpp  BeginToken.h  BreakToken.cpp  BreakToken.h  CaseToken.cpp  CaseToken.h  ChecksumNameToken.cpp  ChecksumNameToken.h  CloseParenthesisToken.cpp  CloseParenthesisToken.h  ColonToken.cpp  ColonToken.h  CommaToken.cpp  CommaToken.h  DefaultToken.cpp  DefaultToken.h  DivideToken.cpp  DivideToken.h  DotToken.cpp  DotToken.h  ElseToken.cpp  ElseToken.h  EndArrayToken.cpp  EndArrayToken.h  EndIfToken.cpp  EndIfToken.h  EndOfFileToken.cpp  EndOfFileToken.h  EndOfLineNumberToken.cpp  EndOfLineNumberToken.h  EndOfLineToken.cpp  EndOfLineToken.h  (+59 more)
src/tools/qgenname/: main.cpp
src/tools/qoffdump/: main.h  qoffdump_symbol.cpp  qoffdump_token.cpp  shared.cpp
src/tools/qopt/: emit_script.cpp  main.cpp  qopt.h  sym_emit.cpp  sym_emit_array.cpp  sym_emit_struct.cpp
src/tools/qresolve/: main.cpp
src/tools/qsymboldump/: SStream.cpp  SStream.h  main.cpp  show_dump.cpp  show_dump.h
src/tools/qsymboldump/symbol/: ArraySymbol.cpp  ArraySymbol.h  FloatSymbol.cpp  FloatSymbol.h  ISStream.h  IntegerSymbol.cpp  IntegerSymbol.h  NameSymbol.cpp  NameSymbol.h  QScriptSymbol.cpp  QScriptSymbol.h  QSymbolStream.h  QSymbolToken.cpp  QSymbolToken.h  StructureSymbol.cpp  StructureSymbol.h  symboltype.h
src/tools/qsymparse/: main.cpp  show_dump.cpp  symbol.h
src/tools/qwsdissect/: CMakeLists.txt  main.c  main.h
src/tools/unchunk/: main.cpp  main_lzss.cpp  main_zlib.cpp  main_zlib_nochnk.cpp
src/tools/unpak/: main.cpp
src/tools/unpre/: main.cpp
src/tools/unwad/: main.cpp
src/tools/wadgen/: main.cpp
